# app/controllers/users.controller.js
@@ -1,3 +1,8 @@
+exports.login = async (req, res) => {
+  let username=req.body.username;
+  let password=req.body.password;
+  let body={error:false,status:true,message:'success!'};
+};
 exports.changePassword = async (req, res) => {
   let oldpass=req.body.old_pass;
   let newpass=req.body.new_pass;
