# app/routes/users.routes.js
@@ -1,6 +1,7 @@
 module.exports = app => {
   const users = require("../controllers/users.controller.js");
   var router = require("express").Router();
+  router.post("/login", users.login);   
   router.post("/changePassword", users.changePassword);   
   router.post("/updateProfile", users.updateProfile);   
   router.post("/updateAvatar", users.updateAvatar);   
